# satcom-fec-trust-lab

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  settings.gradle.kts
.github/workflows/: android-build.yml  host-replay.yml
app/: README.md  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/demo/: replay_pipeline.cpp  replay_pipeline.h
app/src/main/cpp/dsp/: framing.cpp  framing.h  front_end_dsp.cpp  front_end_dsp.h  soft_demod.cpp  soft_demod.h
app/src/main/cpp/fec/: ldpc_bitflip.h  ldpc_decoder_neon.cpp  ldpc_decoder_neon.h  ldpc_decoder_sme2.cpp  ldpc_decoder_sme2.h  viterbi_decoder_neon.cpp  viterbi_decoder_neon.h  viterbi_decoder_sme2.cpp  viterbi_decoder_sme2.h
app/src/main/cpp/trust/: trust_features.cpp  trust_features.h  trust_score.cpp  trust_score.h
app/src/main/cpp/util/: iq_reader.cpp  iq_reader.h  logging.cpp  logging.h
app/src/main/java/com/sylvesterkaczmarek/satcomfec/: MainActivity.kt
app/src/main/java/com/sylvesterkaczmarek/satcomfec/ui/: HomeScreen.kt  MetricsScreen.kt  SettingsScreen.kt
data/examples/open_sat_demo/: readme.md
data/synthetic/canned_replay/: README.md  demo_conv_bpsk.iq  demo_conv_bpsk.json  demo_conv_bpsk_failed.iq  demo_conv_bpsk_failed.json  demo_conv_bpsk_impaired.iq  demo_conv_bpsk_impaired.json
data/synthetic/phisat2_like/: readme.md
docs/: architecture.md  benchmarking.md  data_sources_and_licensing.md  narrative.md  reproducibility.md  safety_leaf.md  simd_status.md  trust_monitors.md
scripts/: benchmark_decoder_paths.sh  build_host_tools.sh  check_branch_metrics.sh  check_replay_demo.sh  collect_metrics.sh  compare_trust_cases.sh  export_batterystats.sh  generate_synthetic_iq.py  plot_metrics.ipynb  run_replay_demo.sh  validate_decoder_alignment.sh  verify_arm_paths.sh
src/demo/: replay_pipeline.cpp  replay_pipeline.h
src/dsp/: framing.cpp  front_end_dsp.cpp  front_end_dsp.h  soft_demod.cpp  soft_demod.h
src/fec/: branch_metrics_sme2.cpp  branch_metrics_sme2.h  convolutional_codec.cpp  convolutional_codec.h  ldpc_bitflip.cpp  ldpc_decoder_neon.cpp  ldpc_decoder_neon.h  viterbi_decoder_neon.h  viterbi_decoder_reference.cpp  viterbi_decoder_reference.h  viterbi_decoder_sme2.cpp  viterbi_decoder_sme2.h
src/trust/: trust_features.h  trust_score.h
src/util/: iq_reader.cpp  iq_reader.h  logging.cpp  logging.h
tests/: test_host_replay.py
tests/golden/: benchmark_alignment.json  replay_failed.json  replay_healthy.json  replay_impaired.json  trust_case_comparison.json
tools/: benchmark_decoders.cpp  check_branch_metrics.cpp  json_output.h  replay_demo.cpp
